--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'The American Naturalist'
 subtitle: 'Beyond Microsoft: A Series of YouTube Shorts'
-author: <img src = '/Users/dpadil10/Downloads/imgs/Subject6.png' width=160px height=140px/><br><img src = '/Users/dpadil10/Downloads/imgs/Subject4.png' alt='Rotated Image' class='rotate-image' width=45px height=50px/>&nbsp;&nbsp;&nbsp;&nbsp;<img src = '/Users/dpadil10/Downloads/imgs/Subject5.png' width=50px height=50px/>&nbsp;&nbsp;&nbsp;&nbsp;<img src = '/Users/dpadil10/Downloads/imgs/Subject2.png' alt='Rotated Image' class='rotate-image2' width=50px height=50px/><br><img src = '/Users/dpadil10/Downloads/imgs/Subject1.png' width=50px height=50px/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src = '/Users/dpadil10/Downloads/imgs/Subject3.png' width=50px height=50px/><br>Dylan Padilla | `r emo::ji('link')` [https://dylanpadilla.netlify.app/](https://dylanpadilla.netlify.app/)<br>ASN Graduate Council | `r emo::ji('link')` [https://asngrads.com/](https://asngrads.com/)<br>`r icon_style(fontawesome('envelope', style='solid'), scale=1, fill='gray')` dpadil10@asu.edu
+author: <img src = 'imgs/Subject6.png' width=160px height=140px/><br><img src = 'imgs/Subject4.png' alt='Rotated Image' class='rotate-image' width=45px height=50px/>&nbsp;&nbsp;&nbsp;&nbsp;<img src = 'imgs/Subject5.png' width=50px height=50px/>&nbsp;&nbsp;&nbsp;&nbsp;<img src = 'imgs/Subject2.png' alt='Rotated Image' class='rotate-image2' width=50px height=50px/><br><img src = 'imgs/Subject1.png' width=50px height=50px/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src = 'imgs/Subject3.png' width=50px height=50px/><br>Dylan Padilla | `r emo::ji('link')` [https://dylanpadilla.netlify.app/](https://dylanpadilla.netlify.app/)<br>ASN Graduate Council | `r emo::ji('link')` [https://asngrads.com/](https://asngrads.com/)<br>`r icon_style(fontawesome('envelope', style='solid'), scale=1, fill='gray')` dpadil10@asu.edu
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -30,7 +30,7 @@ output:
 .title-slide {
 
     margin-top: -50px;
-    background-image: url('/Users/dpadil10/Downloads/imgs/YouTube_logo.png'), url('/Users/dpadil10/Downloads/imgs/ASN_logo-removebg-preview.png');
+    background-image: url('imgs/YouTube_logo.png'), url('imgs/ASN_logo-removebg-preview.png');
     background-size: 15%, 12%;
     background-position: top left, top right, center;
     background-repeat: no-repeat, no-repeat, no-repeat;
@@ -63,8 +63,8 @@ output:
 ## ASN Graduate Council Mixer
 
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/mixer-albuquerque.png' width = 530 height = 400 />
-<img src = '/Users/dpadil10/Downloads/imgs/booth.png' width = 490 height = 400 />
+<img src = 'imgs/mixer-albuquerque.png' width = 530 height = 400 />
+<img src = 'imgs/booth.png' width = 490 height = 400 />
 </center>
 
 The ASN Graduate Council is commited to developing initiatives to provide more valuable services to its student members
@@ -79,7 +79,7 @@ The Graduate Council actively participates in planning and assisting with these 
 
 .pull-left[
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/>
+<img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/>
 </center> 
 ]
 
@@ -101,7 +101,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/>
+<img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/>
 </center> 
 ]
 
@@ -126,7 +126,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/>
+<img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/>
 </center> 
 ]
 
@@ -152,13 +152,13 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/>
+<img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/>
 </center> 
 ]
 
 .pull-right[
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/comment-edited.gif' width = 300 height = 520/>
+<img src = 'imgs/comment-edited.gif' width = 300 height = 520/>
 </center> 
 ]
 
@@ -172,7 +172,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 .pull-left[
 <center>
 <br>
-<img src = '/Users/dpadil10/Downloads/imgs/microsoft.png' width = 600 height = 380>
+<img src = 'imgs/microsoft.png' width = 600 height = 380>
 </center>
 
 ]
@@ -186,7 +186,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 .pull-left[
 <center>
 <br>
-<img src = '/Users/dpadil10/Downloads/imgs/microsoft.png' width = 600 height = 380>
+<img src = 'imgs/microsoft.png' width = 600 height = 380>
 </center>
 
 ]
@@ -195,7 +195,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 <center>
 <br>
-<img src = '/Users/dpadil10/Downloads/imgs/stallman.jpg' width = 600 height = 380>
+<img src = 'imgs/stallman.jpg' width = 600 height = 380>
 </center>
 
 Richard Stallman
@@ -208,16 +208,16 @@ Richard Stallman
 
 .pull-left[
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/tools.png' width = 500 height = 500>
+<img src = 'imgs/tools.png' width = 500 height = 500>
 </center>
 ]
 
 .pull-right[
 
-<img src = '/Users/dpadil10/Downloads/imgs/html.png' width = 190, height = 200>
-<img src = '/Users/dpadil10/Downloads/imgs/css.png' width = 170, height = 175>
-<img src = '/Users/dpadil10/Downloads/imgs/typst.png' width = 150, height = 150>
-<img src = '/Users/dpadil10/Downloads/imgs/R.png' width = 180, height = 180>
+<img src = 'imgs/html.png' width = 190, height = 200>
+<img src = 'imgs/css.png' width = 170, height = 175>
+<img src = 'imgs/typst.png' width = 150, height = 150>
+<img src = 'imgs/R.png' width = 180, height = 180>
 
 ]
 
@@ -227,9 +227,9 @@ Richard Stallman
 
 
 <center>
-<img src = '/Users/dpadil10/Downloads/imgs/trailer1.gif' width = 300 height = 520/>
-<img src = '/Users/dpadil10/Downloads/imgs/trailer2.gif' width = 300 height = 520/>
-<img src = '/Users/dpadil10/Downloads/imgs/trailer3.gif' width = 300 height = 520/>
+<img src = 'imgs/trailer1.gif' width = 300 height = 520/>
+<img src = 'imgs/trailer2.gif' width = 300 height = 520/>
+<img src = 'imgs/trailer3.gif' width = 300 height = 520/>
 </center> 
 
 
