--- a/index.Rmd
+++ b/index.Rmd
@@ -85,7 +85,7 @@ The Graduate Council actively participates in planning and assisting with these 
 
 .pull-right[
 
-- Go to the App Store if you have an IOS device or to the Play Store if you have an Android
+- Go to the App Store if you have an iOS device or to the Play Store if you have an Android
 
 - On the search bar, type 'YouTube' and download the App
 
@@ -424,7 +424,7 @@ Although intended to be watched on smartphones, YouTube Shorts can be viewed on 
 
 ---
 
-## No ads!
+## No Ad!
 
 <img src='https://gifdb.com/images/high/excited-shaquille-o-neal-3isxv4tbjeeb3fej.webp'/>
 
